<resources>
    <string name="app_name">FirstApp</string>
    <string name="inclass01">In Class  Assignment 01</string>
    <string name="bmi_title">Body Mass Index (BMI)</string>
    <string name="weight_text">Weight</string>
    <string name="weight_input_text">Your weight in pounds</string>
    <string name="lb_text">lb</string>
    <string name="height_title">Height</string>
    <string name="feet_text">feet</string>
    <string name="inches_text">inches</string>
    <string name="button_calculate">Calculate BMI</string>
    <string name="bmi_text">Click on Calculate BMI to find your BMI</string>
    <string name="inclass02_button">"in class "</string>
    <string name="inclass_02">IN CLASS ASSIGNMENT 02</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="use_text02">I use</string>
    <string name="android_rd">Android</string>
    <string name="ios_rd">iOS</string>
    <string name="currentMood">Your current mood:</string>
    <string name="submit">Submit</string>
    <string name="select_avatar_text">Select your Avatar</string>
    <string name="name_bold">Name:</string>
    <string name="email_bold">Email:</string>
    <string name="i_use_text">"I use "</string>
    <string name="Mood_text">"I am "</string>
    <string name="empty_string">" "</string>
    <string name="happy_text">Happy</string>
    <string name="angry_text">Angry</string>
    <string name="inclass03_button">IN CLASS ASSIGNMENT 03</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inClass04">IN CLASS ASSIGNMENT 04</string>
    <string name="complexityText">Select Complexity:</string>
    <string name="timesText">times</string>
    <string name="minimumString">Minimum:</string>
    <string name="maxString">Maximum:</string>
    <string name="avgString">Average:</string>
    <string name="generateButton">Generate Number</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="button5">IN CLASS ASSIGNMENT 05</string>
    <string name="keyWord">Search Keyword</string>
    <string name="go">Go</string>
    <string name="INCLASS06bUTTON">IN CLASS ASSIGNMENT 06</string>
    <string name="chooseCountry">Choose country:</string>
    <string name="Category">Category:</string>
    <string name="country">Country:</string>
    <string name="search">Search</string>
    <string name="selectcc">Select a country and a category</string>
    <string name="newsTitle">Your news</string>
    <string name="Source">"Source: "</string>
    <string name="author">"Author: "</string>
    <string name="title">"Title: "</string>
    <string name="description">"Description: "</string>
    <string name="url">"Url: "</string>
    <string name="published">"Published: "</string>
    <string name="content">"Content: "</string>
    <string name="hyperlink"><a href="https://www.google.com">Go to the news!</a></string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="password">Password</string>
    <string name="passwordText">Password</string>
    <string name="contrasena">contrasena</string>
    <string name="nametext">Name (only for sign up)</string>
    <string name="note">Note:</string>
    <string name="delete">Delete</string>
    <string name="inclass08">IN CLASS ASSIGNMENT 08</string>
    <string name="password08">Password:</string>
    <string name="signup08">Don\'t have an account yet?</string>
    <string name="firstname">First name:</string>
    <string name="lastname">Last name:</string>
    <string name="username">Username:</string>
    <string name="confirmpassword">Confirm password:</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastnameSignup">Last name</string>
    <string name="usernameSignup">Username</string>
    <string name="confirmapasswordHint">Confirm password</string>
    <string name="newCreds">Log in with your new credentials!</string>
    <string name="logout">Log out</string>
    <string name="chats">Chats</string>
    <string name="send">Send</string>
    <string name="typemessage">Type your message here</string>
    <string name="chattingWith">Chatting with:</string>
    <string name="loggedInAs">"You are logged in as "</string>
    <string name="chat">Chat</string>
    <string name="add">ADD</string>
    <string name="groupchat">Create Groupchat!</string>
    <string name="usernameGroupchat">Type groupchat members</string>
    <string name="members">Members:</string>
    <string name="info">Add usernames and create your groupchat!</string>
    <string name="enter">Type new credentials</string>
    <string name="infoProfile">Click the image to edit it</string>
    <string name="save">SAVE</string>
    <string name="edit">Edit your first name below</string>
    <string name="flip_camera">FLIP</string>
    <string name="open_gallery">Open</string>
    <string name="take_photo">PHOTO</string>
    <string name="retake">Retake</string>
    <string name="upload">Upload</string>
    <string name="sendIng"><![CDATA[>]]></string>
    <string-array name="countries">
        <item></item>
        <item>us</item>
        <item>sa</item>
        <item>ve</item>
        <item>au</item>
        <item>kr</item>
    </string-array>
    <string-array name="categories">
        <item></item>
        <item>business</item>
        <item>entertainment</item>
        <item>general</item>
        <item>health</item>
        <item>science</item>
        <item>sports</item>
        <item>technology</item>
    </string-array>
</resources>