<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RegisterContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inClass08.RegisterSignUp">

    <Button
        android:id="@+id/loginButton08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextLogin" />

    <Button
        android:id="@+id/signUpButton08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/emailTextLogIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/emailLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passwordLogin"
        app:layout_constraintTop_toTopOf="@+id/emailLogin" />

    <EditText
        android:id="@+id/passwordTextLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/passwordLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passwordLogin"
        app:layout_constraintTop_toTopOf="@+id/passwordLogin" />

    <EditText
        android:id="@+id/firstNameTextSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/firstNameHint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/firstNameSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstNameSignUp"
        app:layout_constraintStart_toStartOf="@+id/lastNameTextSignUp"
        app:layout_constraintTop_toTopOf="@+id/firstNameSignUp" />

    <EditText
        android:id="@+id/lastNameTextSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/lastnameSignup"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/lastnameSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/usernameTextSignUp"
        app:layout_constraintTop_toTopOf="@+id/lastnameSignup" />

    <EditText
        android:id="@+id/usernameTextSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/usernameSignup"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/usernameSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/usernameSignup"
        app:layout_constraintStart_toStartOf="@+id/emailTextSignup"
        app:layout_constraintTop_toTopOf="@+id/usernameSignup" />

    <EditText
        android:id="@+id/emailTextSignup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/emailSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/passwordTextSignUp"
        app:layout_constraintTop_toTopOf="@+id/emailSignUp" />

    <EditText
        android:id="@+id/confirmPasswordTextSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="2dp"
        android:ems="10"
        android:hint="@string/confirmapasswordHint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/reTypePasswordSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reTypePasswordSignup"
        app:layout_constraintTop_toTopOf="@+id/reTypePasswordSignup" />

    <EditText
        android:id="@+id/passwordTextSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/passwordSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/confirmPasswordTextSignUp"
        app:layout_constraintTop_toTopOf="@+id/passwordSignup" />

    <ImageView
        android:id="@+id/signUpImage"
        android:layout_width="61dp"
        android:layout_height="62dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton08"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTextSignUp"
        app:srcCompat="@drawable/select_avatar" />

    <TextView
        android:id="@+id/emailLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/email_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/password08"
        app:layout_constraintStart_toStartOf="@+id/emailLogin"
        app:layout_constraintTop_toBottomOf="@+id/emailLogin" />

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/signup08"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton08" />

    <TextView
        android:id="@+id/signupclick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/signup"
        android:textColor="#2196F3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupText" />

    <TextView
        android:id="@+id/firstNameSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/firstname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupclick" />

    <TextView
        android:id="@+id/lastnameSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lastname"
        app:layout_constraintStart_toStartOf="@+id/firstNameSignUp"
        app:layout_constraintTop_toBottomOf="@+id/firstNameSignUp" />

    <TextView
        android:id="@+id/usernameSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="@+id/lastnameSignup"
        app:layout_constraintTop_toBottomOf="@+id/lastnameSignup" />

    <TextView
        android:id="@+id/emailSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/email_bold"
        app:layout_constraintStart_toStartOf="@+id/usernameSignup"
        app:layout_constraintTop_toBottomOf="@+id/usernameSignup" />

    <TextView
        android:id="@+id/passwordSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/password08"
        app:layout_constraintStart_toStartOf="@+id/emailSignUp"
        app:layout_constraintTop_toBottomOf="@+id/emailSignUp" />

    <TextView
        android:id="@+id/reTypePasswordSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/confirmpassword"
        app:layout_constraintStart_toStartOf="@+id/passwordSignup"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignup" />

    <TextView
        android:id="@+id/newCredentialsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newCreds"
        android:textColor="#F10606"
        app:layout_constraintBottom_toTopOf="@+id/emailTextLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>