<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inClass02Activity">

    <EditText
        android:id="@+id/name_textInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_textInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/name_textInput"
        app:layout_constraintStart_toStartOf="@+id/name_textInput"
        app:layout_constraintTop_toBottomOf="@+id/name_textInput" />

    <TextView
        android:id="@+id/use_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/use_text02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar_image" />

    <SeekBar
        android:id="@+id/mood_seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentMood_text" />

    <TextView
        android:id="@+id/currentMood_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/currentMood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <ImageView
        android:id="@+id/mood_img"
        android:layout_width="43dp"
        android:layout_height="39dp"
        app:layout_constraintBottom_toBottomOf="@+id/mood_seekbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mood_seekbar"
        app:layout_constraintTop_toTopOf="@+id/mood_seekbar"
        app:srcCompat="@drawable/angry" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood_seekbar" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/use_text"
        app:layout_constraintTop_toBottomOf="@+id/use_text">

        <RadioButton
            android:id="@+id/android_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/android_rd" />

        <RadioButton
            android:id="@+id/ios_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ios_rd" />

    </RadioGroup>

    <ImageView
        android:id="@+id/avatar_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_textInput"
        app:srcCompat="@drawable/select_avatar" />

    <TextView
        android:id="@+id/moodText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/angry_text"
        app:layout_constraintBottom_toBottomOf="@+id/currentMood_text"
        app:layout_constraintStart_toEndOf="@+id/currentMood_text"
        app:layout_constraintTop_toTopOf="@+id/currentMood_text" />
</androidx.constraintlayout.widget.ConstraintLayout>